# adme

./: .gitignore  Cargo.toml  README.md
adme/: Cargo.toml
adme/src/: assembler.rs  interpreter.rs  lib.rs  main.rs  memory.rs  util.rs  wasm.rs
adme/src/assembler/: source_map.rs
adme/src/jit/: mod.rs  x86_64.rs
adme/src/jit/x86_64/: mod.rs  op.rs
adme/test/: all.s  echo_int.s  hello.s  test_prime.s
www/: global.js  index.html  index.js  js  mktar.sh  server.sh  style.css
