cargo-features = ["edition2021"]

[package]
name = "adme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "wee_alloc"]

[lib]
crate-type = ["cdylib", "rlib"]
